
[package]
name = "libbpf-rust-nix"
version = "0.1.0"
#edition.workspace = true
license = "LGPL-2.1-only OR BSD-2-Clause"

[build-dependencies]
libbpf-cargo = "0.25.0-beta.1" 
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94" }

[[bin]]
name = "netfilter_blocklist"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.32", default-features = false, features = ["std", "derive", "help", "usage"] }
ctrlc = "3.2"
libbpf-cargo = "0.25.0-beta.1"
#libbpf-rs = { path = "../../libbpf-rs" }
libbpf-rs = "0.25.0-beta.1"
plain = "0.2"
